# WebBench

./: .gitignore  test-it-all.ps1
Docs/: Project.md
Dotnet/: .env.example  .gitignore  Directory.Build.props  Directory.Packages.props  Dockerfile  compose.vm.yaml
Dotnet.Aot/: .env.example  .gitignore  Directory.Build.props  Directory.Packages.props
Dotnet.Dapper/: .env.example  Directory.Packages.props  Dockerfile
Dotnet.DapperAot/: .env.example  AuthorsBooksService.slnx  Directory.Packages.props  Dockerfile  compose.vm.yaml
Dotnet.Simple/: .env.example  .gitignore  AuthorsBooksService.slnx  Directory.Packages.props  Dockerfile  README.md
Dotnet.SimpleAot/: .dockerignore  .env.example  README.md  compose.vm.yaml
Rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.MD  Dockerfile  README.md  compose.vm.yaml  deployment.env.example  docker-compose.yml
Rust/config/: default.toml
Rust/migrations/: 0001_create_authors_and_books.sql  20260430000000_create_stores.down.sql  20260430000000_create_stores.up.sql
Rust/scripts/: build.ps1  deploy.ps1  push-acr.ps1
Rust/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
Rust/src/application/: health.rs  mod.rs
Rust/src/application/authors/: commands.rs  mod.rs  queries.rs
Rust/src/application/books/: commands.rs  mod.rs  queries.rs
Rust/src/application/stores/: mod.rs  queries.rs
Rust/src/domain/: author.rs  book.rs  mod.rs  store.rs
Rust/src/infrastructure/: db.rs  health.rs  mod.rs
Rust/src/infrastructure/persistence/: mod.rs  postgres_author_repository.rs  postgres_book_repository.rs  postgres_store_repository.rs
Rust/src/presentation/http/: mod.rs  router.rs
RustSimple/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  compose.vm.yaml
RustSimple/migrations/: 0001_create_authors_and_books.sql  0002_align_authors_books_with_dotnet_schema.sql  0005_add_book_list_indexes.sql  0006_create_stores_and_inventory.sql
RustSimple/scripts/: build.ps1  deploy.ps1  push-acr.ps1
RustSimple/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
RustSimple/src/resources/: authors.rs  books.rs  mod.rs  stores.rs
(+311 files in other folders)
